feat: email send priority
